# LarpMyResume

./: .gitignore  LICENSE  README.md  RESEARCH.md  pyproject.toml
.github/workflows/: python-ci.yml  ruby-ci.yml
ruby/: Rakefile  larp-my-resume-report.gemspec
ruby/lib/larp_my_resume_report/: cli.rb  parser.rb  renderer.rb
ruby/lib/larp_my_resume_report/templates/: report.html.erb
ruby/spec/: cli_spec.rb  parser_spec.rb  renderer_spec.rb  spec_helper.rb
ruby/spec/fixtures/: bad_version.json  full_match.json  scan_only.json
src/larpmyresume/: __init__.py  __main__.py  cli.py  extractor.py  scraper.py
src/larpmyresume/analyzers/: __init__.py  ats_checker.py  bullet_scorer.py  keyword_matcher.py  skills_gazetteer.py
tests/: conftest.py  test_ats_checker.py  test_bullet_scorer.py  test_cli.py  test_extractor.py  test_keyword_matcher.py
tests/fixtures/: generate_fixtures.py
