[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "larp-my-resume"
version = "0.1.0"
requires-python = ">=3.10"
license = {text = "MIT"}
description = "Rule-based, offline resume auditor for ATS compatibility and keyword matching"
readme = "README.md"
dependencies = [
    "pdfplumber>=0.10,<0.12",
    "typer>=0.12,<0.13",
    "click>=8.1,<8.2",
    "rich>=13,<14",
    "httpx>=0.27,<0.28",
    "beautifulsoup4>=4.12,<5",
    "lxml>=5,<6",
]

[project.urls]
Homepage = "https://github.com/B2707/LarpMyResume"
Issues = "https://github.com/B2707/LarpMyResume/issues"

[project.scripts]
larp-my-resume = "larpmyresume.cli:app"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=4", "reportlab>=4"]

[tool.hatch.build.targets.wheel]
packages = ["src/larpmyresume"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
